# lumena-scanner

./: CONTRIBUTING.md  EXAMPLES.md  EXTENDING.md  QUICKSTART.md  README.md  lumena.example.yaml  pyproject.toml
.github/workflows/: lumena-scan.yml  lumena-watcher.yml
.lumena/: README.md  scan.py
examples/: vulnerable_code.md
lumena/: __init__.py  cli.py  scanner.py
lumena/detectors/: __init__.py  ai_token_detector.py  eval_detector.py  secret_detector.py  vault_detector.py
tests/: __init__.py  test_ai_token_detector.py  test_eval_detector.py  test_scanner.py  test_secret_detector.py  test_vault_detector.py
